JNJ build warning message alignement issue fixed

--- a/phresco-framework-web/src/main/webapp/theme/red_blue/css/media-queries.css
+++ b/phresco-framework-web/src/main/webapp/theme/red_blue/css/media-queries.css
@@ -436,7 +436,7 @@ Width <= 1024
 	 #warningmsg {
      	display: none;
      	width: auto; 
-     	left: 21.7%; 
+     	left: 30.7%; 
      	position: absolute; 
      	text-align: center;
      	padding: 4px 6px;
